# searchObject

./: CMakeCache.txt  CMakeLists.txt  ITOG.txt  IntImg.cpp  IntImg.h  IntImg.h.gch  IntImg.txt  Makefile  My_VJ_alg  SameScale.cpp  SameScale.h  buildMake.sh  cmake_install.cmake  haar.cpp  haar.h  install_manifest.txt  workProt.cpp  итог.ods
IImg/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+8 more)
images/: результаты_тестирования.ods
install/: My_VJ_alg
